--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -10,6 +10,7 @@ WaitForProcess           = 0
 
 [Compatibility]
 AntiAliasing             = 0
+ArmadaFix                = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
 DDrawCompatDisableGDIHook = 0
