--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -47,14 +47,14 @@
     <OutDir>$(OutDir)</OutDir>
     <IntDir>$(IntDir)</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);libraries;Dllmain;DDrawCompat\v0.2.1;DxWnd\v2_03_60_src;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);libraries;Dllmain;DDrawCompat\v0.2.1;DxWnd\v2_03_60_src;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\include;$(IncludePath);C:\Program Files (x86)\Windows Kits\dx8sdk\include</IncludePath>
     <LibraryPath>$(DXSDK_DIR)\Lib\x86;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\lib.X86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(OutDir)</OutDir>
     <IntDir>$(IntDir)</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);libraries;Dllmain;DDrawCompat\v0.2.1;DxWnd\v2_03_60_src;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);libraries;Dllmain;DDrawCompat\v0.2.1;DxWnd\v2_03_60_src;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\include;$(IncludePath);C:\Program Files (x86)\Windows Kits\dx8sdk\include</IncludePath>
     <LibraryPath>$(DXSDK_DIR)\Lib\x86;C:\Program Files (x86)\Microsoft Research\Detours Express 3.0\lib.X86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -229,6 +229,44 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="DDrawCompat\v0.2.1\RealPrimarySurface.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\Time.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp" />
+    <ClCompile Include="ddraw\ddraw.cpp" />
+    <ClCompile Include="ddraw\IDirect3D.cpp" />
+    <ClCompile Include="ddraw\IDirect3D2.cpp" />
+    <ClCompile Include="ddraw\IDirect3D3.cpp" />
+    <ClCompile Include="ddraw\IDirect3D7.cpp" />
+    <ClCompile Include="ddraw\IDirect3DDevice.cpp" />
+    <ClCompile Include="ddraw\IDirect3DDevice2.cpp" />
+    <ClCompile Include="ddraw\IDirect3DDevice3.cpp" />
+    <ClCompile Include="ddraw\IDirect3DDevice7.cpp" />
+    <ClCompile Include="ddraw\IDirect3DExecuteBuffer.cpp" />
+    <ClCompile Include="ddraw\IDirect3DLight.cpp" />
+    <ClCompile Include="ddraw\IDirect3DMaterial.cpp" />
+    <ClCompile Include="ddraw\IDirect3DMaterial2.cpp" />
+    <ClCompile Include="ddraw\IDirect3DMaterial3.cpp" />
+    <ClCompile Include="ddraw\IDirect3DTexture.cpp" />
+    <ClCompile Include="ddraw\IDirect3DTexture2.cpp" />
+    <ClCompile Include="ddraw\IDirect3DVertexBuffer.cpp" />
+    <ClCompile Include="ddraw\IDirect3DVertexBuffer7.cpp" />
+    <ClCompile Include="ddraw\IDirect3DViewport.cpp" />
+    <ClCompile Include="ddraw\IDirect3DViewport2.cpp" />
+    <ClCompile Include="ddraw\IDirect3DViewport3.cpp" />
+    <ClCompile Include="ddraw\IDirectDraw.cpp" />
+    <ClCompile Include="ddraw\IDirectDraw2.cpp" />
+    <ClCompile Include="ddraw\IDirectDraw3.cpp" />
+    <ClCompile Include="ddraw\IDirectDraw4.cpp" />
+    <ClCompile Include="ddraw\IDirectDraw7.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawClipper.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawColorControl.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawEnumSurface.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawFactory.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawGammaControl.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawPalette.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawSurface.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawSurface2.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawSurface3.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawSurface4.cpp" />
+    <ClCompile Include="ddraw\IDirectDrawSurface7.cpp" />
+    <ClCompile Include="ddraw\InterfaceQuery.cpp" />
     <ClCompile Include="Disasm\cmdlist.c" />
     <ClCompile Include="Disasm\Disasm.c" />
     <ClCompile Include="Dllmain\Dllmain.cpp" />
@@ -300,6 +338,44 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="DDrawCompat\v0.2.1\RealPrimarySurface.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\ScopedCriticalSection.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\Time1.h" />
+    <ClInclude Include="ddraw\ddraw.h" />
+    <ClInclude Include="ddraw\ddrawExternal.h" />
+    <ClInclude Include="ddraw\IDirect3D.h" />
+    <ClInclude Include="ddraw\IDirect3D2.h" />
+    <ClInclude Include="ddraw\IDirect3D3.h" />
+    <ClInclude Include="ddraw\IDirect3D7.h" />
+    <ClInclude Include="ddraw\IDirect3DDevice.h" />
+    <ClInclude Include="ddraw\IDirect3DDevice2.h" />
+    <ClInclude Include="ddraw\IDirect3DDevice3.h" />
+    <ClInclude Include="ddraw\IDirect3DDevice7.h" />
+    <ClInclude Include="ddraw\IDirect3DExecuteBuffer.h" />
+    <ClInclude Include="ddraw\IDirect3DLight.h" />
+    <ClInclude Include="ddraw\IDirect3DMaterial.h" />
+    <ClInclude Include="ddraw\IDirect3DMaterial2.h" />
+    <ClInclude Include="ddraw\IDirect3DMaterial3.h" />
+    <ClInclude Include="ddraw\IDirect3DTexture.h" />
+    <ClInclude Include="ddraw\IDirect3DTexture2.h" />
+    <ClInclude Include="ddraw\IDirect3DVertexBuffer.h" />
+    <ClInclude Include="ddraw\IDirect3DVertexBuffer7.h" />
+    <ClInclude Include="ddraw\IDirect3DViewport.h" />
+    <ClInclude Include="ddraw\IDirect3DViewport2.h" />
+    <ClInclude Include="ddraw\IDirect3DViewport3.h" />
+    <ClInclude Include="ddraw\IDirectDraw.h" />
+    <ClInclude Include="ddraw\IDirectDraw2.h" />
+    <ClInclude Include="ddraw\IDirectDraw3.h" />
+    <ClInclude Include="ddraw\IDirectDraw4.h" />
+    <ClInclude Include="ddraw\IDirectDraw7.h" />
+    <ClInclude Include="ddraw\IDirectDrawClipper.h" />
+    <ClInclude Include="ddraw\IDirectDrawColorControl.h" />
+    <ClInclude Include="ddraw\IDirectDrawEnumSurface.h" />
+    <ClInclude Include="ddraw\IDirectDrawFactory.h" />
+    <ClInclude Include="ddraw\IDirectDrawGammaControl.h" />
+    <ClInclude Include="ddraw\IDirectDrawPalette.h" />
+    <ClInclude Include="ddraw\IDirectDrawSurface.h" />
+    <ClInclude Include="ddraw\IDirectDrawSurface2.h" />
+    <ClInclude Include="ddraw\IDirectDrawSurface3.h" />
+    <ClInclude Include="ddraw\IDirectDrawSurface4.h" />
+    <ClInclude Include="ddraw\IDirectDrawSurface7.h" />
     <ClInclude Include="Disasm\disasm.h" />
     <ClInclude Include="Dllmain\Dllmain.h" />
     <ClInclude Include="Dllmain\dxwrapper.h" />
