Added full d3d9 wrapper
- Added full d3d9 wrapper
- Removed d3d9 logging

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -202,7 +202,24 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="D3d8to9\d3d8to9_volume.cpp" />
     <ClCompile Include="D3d8to9\d3d8types.cpp" />
     <ClCompile Include="D3d8to9\lookup_table.cpp" />
-    <ClCompile Include="D3d9\d3d9.cpp" />
+    <ClCompile Include="d3d9\d3d9.cpp" />
+    <ClCompile Include="d3d9\IDirect3D9.cpp" />
+    <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
+    <ClCompile Include="d3d9\IDirect3DCubeTexture9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DDevice9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DDevice9Ex.cpp" />
+    <ClCompile Include="d3d9\IDirect3DIndexBuffer9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DPixelShader9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DQuery9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DStateBlock9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DSurface9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DSwapChain9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DTexture9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVertexBuffer9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVertexDeclaration9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVertexShader9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVolume9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVolumeTexture9.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDraw.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp" />
@@ -303,8 +320,25 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="D3d8to9\d3d8types.hpp" />
     <ClInclude Include="D3d8to9\d3dx9.hpp" />
     <ClInclude Include="D3d8to9\lookup_table.hpp" />
-    <ClInclude Include="D3d9\d3d9.h" />
-    <ClInclude Include="D3d9\D3d9External.h" />
+    <ClInclude Include="d3d9\d3d9.h" />
+    <ClInclude Include="d3d9\d3d9External.h" />
+    <ClInclude Include="d3d9\IDirect3D9.h" />
+    <ClInclude Include="d3d9\IDirect3D9Ex.h" />
+    <ClInclude Include="d3d9\IDirect3DCubeTexture9.h" />
+    <ClInclude Include="d3d9\IDirect3DDevice9.h" />
+    <ClInclude Include="d3d9\IDirect3DDevice9Ex.h" />
+    <ClInclude Include="d3d9\IDirect3DIndexBuffer9.h" />
+    <ClInclude Include="d3d9\IDirect3DPixelShader9.h" />
+    <ClInclude Include="d3d9\IDirect3DQuery9.h" />
+    <ClInclude Include="d3d9\IDirect3DStateBlock9.h" />
+    <ClInclude Include="d3d9\IDirect3DSurface9.h" />
+    <ClInclude Include="d3d9\IDirect3DSwapChain9.h" />
+    <ClInclude Include="d3d9\IDirect3DTexture9.h" />
+    <ClInclude Include="d3d9\IDirect3DVertexBuffer9.h" />
+    <ClInclude Include="d3d9\IDirect3DVertexDeclaration9.h" />
+    <ClInclude Include="d3d9\IDirect3DVertexShader9.h" />
+    <ClInclude Include="d3d9\IDirect3DVolume9.h" />
+    <ClInclude Include="d3d9\IDirect3DVolumeTexture9.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\CompatDirectDraw.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.h" />
