--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -1,6 +1,7 @@
 ;; Config file for DirectX DLL Wrapper
 [General]
 RealDllPath              = 
+LoadCustomDllPath        = 
 RunProcess               = 
 WaitForProcess           = 0
 
